src/objects/Insurance__c.object
<CustomObject>
    <fields>
        <fullName>Alert_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alert Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Id__c</fullName>
        <label>Business Unit Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Copy_Uploaded__c</fullName>
        <label>Insurance Copy Uploaded</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance_Document_Id__c</fullName>
        <label>Insurance Document Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_File_Id__c</fullName>
        <label>Insurance File Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Location__c</fullName>
        <label>Insurance Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Locations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notify1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization_Id__c</fullName>
        <label>Organization Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <label>Policy Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA_Insurance_Id__c</fullName>
        <label>TA Insurance Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>General Liability</fullName>
                </value>
                <value>
                    <fullName>Workers Comp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>test_instructions__c</fullName>
        <defaultValue>&quot;Instruction on insurance:&quot; &amp; BR() &amp; BR() &amp; &quot;This is just a test&quot;</defaultValue>
        <description>testing static text on the page</description>
        <label>test instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Insurance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Expiry_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Insurance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Effective_Date_Must_Be_Before_Expiry</fullName>
        <active>true</active>
        <description>This validation rule will check that the Effective Date is set to be before Expiry Date.</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK( Effective_Date__c )), 
NOT(ISBLANK( Expiry_Date__c )), 
Effective_Date__c &gt; Expiry_Date__c 
)</errorConditionFormula>
        <errorDisplayField>Effective_Date__c</errorDisplayField>
        <errorMessage>The Effective Date must be before the Expiry Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expiration_Date_Must_Be_In_Future</fullName>
        <active>true</active>
        <description>This validation rule will ensure that the Expiration Date is set in the future.</description>
        <errorConditionFormula>AND(
 NOT(ISBLANK(Expiry_Date__c)),
 Expiry_Date__c &lt; TODAY ()
)</errorConditionFormula>
        <errorDisplayField>Expiry_Date__c</errorDisplayField>
        <errorMessage>You must set an expiration date in the future.</errorMessage>
    </validationRules>
</CustomObject>